design mvc architecture, wrote model wrapper crud functions, database design, populate countries and states table.. added authentication with JWTWEBTOKENS
